--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -65,4 +65,5 @@
     <dimen name="dp26">26dp</dimen>
     <dimen name="dp120">120dp</dimen>
     <dimen name="dp80">80dp</dimen>
+    <dimen name="dp58">58dp</dimen>
 </resources>
