--- a/app/src/main/res/layouts/add_records/layout/global_item_simple_spinner.xml
+++ b/app/src/main/res/layouts/add_records/layout/global_item_simple_spinner.xml
@@ -1,16 +1,15 @@
 <com.rescribe.doctor.ui.customesViews.CustomTextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@android:id/text1"
+    android:id="@+id/servicestextView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/dp10"
+    android:paddingBottom="@dimen/dp6"
     android:paddingEnd="@dimen/dp16"
     android:paddingRight="@dimen/dp5"
     android:paddingStart="@dimen/dp16"
-    android:paddingTop="@dimen/dp10"
     android:text="@string/select_date_text"
     android:textColor="@color/greyish"
-    android:textSize="@dimen/sp16"
+    android:textSize="@dimen/sp14"
     app:customFont="@string/roboto_regular"
     tools:ignore="MissingTranslation" />
