--- a/app/src/main/res/layouts/patient/patient_history/layout/patient_history_list_fragment_container.xml
+++ b/app/src/main/res/layouts/patient/patient_history/layout/patient_history_list_fragment_container.xml
@@ -2,6 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
@@ -33,48 +34,33 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:src="@drawable/no_records_found"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:visibility="visible"/>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
+            android:layout_above="@+id/addRecordButton"
             android:orientation="vertical">
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/viewpager"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/opdStatusDetails" />
+                android:layout_height="wrap_content" />
 
-            <FrameLayout
-                android:id="@+id/opdStatusDetails"
-                android:layout_width="match_parent"
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:orientation="vertical">
+                android:layout_margin="@dimen/fab_margin"
+                android:src="@drawable/ic_add_action"
+                app:backgroundTint="@color/floating_blue_color"
+                android:layout_alignParentRight="true" />
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/dp10"
-                    android:layout_marginRight="@dimen/dp10"
-                    android:background="@drawable/bx"
-                    android:visibility="gone">
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/opdStatusGridView"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_centerInParent="true"
-                        android:layout_margin="@dimen/dp10" />
-
-                </RelativeLayout>
-
-
-            </FrameLayout>
-
-        </LinearLayout>
+        </RelativeLayout>
 
         <Button
             android:id="@+id/addRecordButton"
@@ -85,16 +71,9 @@
             android:background="@drawable/button_selector"
             android:text="@string/add_record"
             android:textColor="@color/white"
-            android:visibility="gone" />
-    </RelativeLayout>
+            android:visibility="gone"
+            tools:visibility="visible"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/filter"
-        app:backgroundTint="@color/Red" />
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
