--- a/app/src/main/res/layouts/profile/layout/profile_content_layout.xml
+++ b/app/src/main/res/layouts/profile/layout/profile_content_layout.xml
@@ -43,7 +43,7 @@
                     <ListView
                         android:id="@+id/servicesListView"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="70dp"
                         android:divider="@null"
                         android:listSelector="@android:color/transparent"
                         android:dividerHeight="0dp"
@@ -73,7 +73,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:padding="@dimen/dp10"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
                         android:id="@+id/aboutDoctor"
@@ -92,7 +92,18 @@
                         android:textColor="@color/about_doctor_color"
                         android:textSize="@dimen/sp14"
                         app:customFont="@string/roboto_regular"
-                        tools:text="Lorem \n\n" />
+                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing
+elit, sed do eiusmod tempor incididunt ut labore et
+dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut
+aliquip ex ea commodo consequat. Duis aute irure
+dolor in reprehenderit in voluptate velit esse cillum
+dolore eu fugiat nulla pariatur. Excepteur sint occae
+cat cupidatat non proident, sunt in culpa qui officia
+deserunt mollit anim id est laborum.Excepteur sint
+occaecat cupidatat non proident, sunt in culpa qui
+officia deserunt mollit anim id est laborum sunt in
+culpa qui  officia deserunt mollit anim id est laborum" />
                 </LinearLayout>
             </LinearLayout>
 
