--- a/app/src/main/res/layouts/global_ui_for_connect/layout/global_connect_recycle_view_layout.xml
+++ b/app/src/main/res/layouts/global_ui_for_connect/layout/global_connect_recycle_view_layout.xml
@@ -28,8 +28,7 @@
         android:layout_below="@+id/pickSpeciality"
         android:divider="@null"
         android:dividerHeight="0dp"
-        android:visibility="visible"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"></android.support.v7.widget.RecyclerView>
+        android:visibility="visible"/>
 
     <RelativeLayout
         android:layout_below="@id/listView"
