added offline chat

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -52,4 +52,5 @@
     <color name="patient_history_calender_days">#3677a3</color>
     <color name="bg_white_color">#f4f4f4</color>
     <color name="bg_grey_color">#eaeaea</color>
+    <color name="yellow">#FFFF33</color>
 </resources>
