--- a/app/src/main/res/layouts/patient/patient_appointment/layout/dialog_select_location_waiting_list_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/dialog_select_location_waiting_list_layout.xml
@@ -1,6 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/transparent"
@@ -56,64 +55,39 @@
             android:layout_height="wrap_content"
             android:background="@drawable/vitals_curve_white_bg"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/dp12"
+            android:paddingTop="@dimen/dp12">
 
-            <LinearLayout
+            <RadioGroup
+                android:id="@+id/radioGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dp16"
-                android:orientation="vertical">
+                android:layout_marginEnd="@dimen/dp12"
+                android:layout_marginStart="@dimen/dp12"
+                android:orientation="vertical" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingTop="@dimen/dp16">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="@dimen/dp12"
+                android:layout_marginTop="@dimen/dp12"
+                android:background="@color/divider" />
 
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:paddingTop="@dimen/dp10">
-
-                        <android.support.v7.widget.RecyclerView
-                            android:id="@+id/recyclerView"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:divider="@null"
-                            android:dividerHeight="0dp"
-                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                            tools:ignore="ObsoleteLayoutParam"
-                            tools:visibility="visible" />
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_marginBottom="@dimen/dp10"
-                            android:layout_marginTop="@dimen/dp10"
-                            android:background="@color/divider" />
-
-                        <android.support.v7.widget.AppCompatButton
-                            android:id="@+id/okButton"
-                            android:layout_width="wrap_content"
-                            android:layout_height="@dimen/dp28"
-                            android:layout_centerHorizontal="true"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="@dimen/dp10"
-                            android:background="@drawable/curve_edges_button"
-                            android:gravity="center"
-                            android:text="@string/ok"
-                            android:textAllCaps="true"
-                            android:textColor="@color/white"
-                            android:textSize="14sp"
-                            app:customFont="@string/roboto_medium" />
-
-
-                    </LinearLayout>
-                </LinearLayout>
-
-            </LinearLayout>
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/okButton"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dp28"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/dp10"
+                android:layout_marginStart="@dimen/dp10"
+                android:background="@drawable/curve_edges_button"
+                android:gravity="center"
+                android:text="@string/ok"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:customFont="@string/roboto_medium" />
 
         </LinearLayout>
     </LinearLayout>
