--- a/app/src/main/res/layouts/patient/patient_appointment/layout/sms_content_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/sms_content_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,53 +9,64 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="167dp"
+        android:padding="@dimen/dp16">
 
         <com.rescribe.doctor.ui.customesViews.CustomTextView
             android:id="@+id/toTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/dp16"
             android:text="To"
-            android:textColor="@color/black"
-            android:textSize="@dimen/dp16"
+            android:textSize="@dimen/sp16"
             app:customFont="@string/roboto_bold" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginTop="@dimen/dp8"
-            android:layout_toRightOf="@id/toTextView"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp16"
+            android:layout_marginStart="@dimen/dp16"
+            android:background="@drawable/curve_edges_background"
+            android:padding="@dimen/dp10"
             android:clipToPadding="false"
-            android:padding="@dimen/dp16"></android.support.v7.widget.RecyclerView>
+            android:layout_toEndOf="@id/toTextView"
+            android:layout_toRightOf="@id/toTextView" />
 
     </RelativeLayout>
-<LinearLayout
-    android:layout_marginTop="@dimen/dp30"
-    android:layout_gravity="center"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <EditText
-        android:id="@+id/editTextSmsContent"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/dp8"
-        android:layout_gravity="center_vertical"
-        android:layout_marginStart="@dimen/dp8"
-        android:background="@drawable/curve_edges_background"
-        android:inputType="textMultiLine"
-        android:padding="@dimen/dp8"
-        android:textCursorDrawable="@drawable/cursor" />
-    <ImageView
-        android:id="@+id/sendSmsButton"
-        android:layout_gravity="center_vertical"
 
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/send_button"/>
+        android:layout_gravity="center"
+        android:layout_alignParentBottom="true"
+        android:padding="@dimen/dp16">
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/editTextSmsContent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/dp14"
+            android:layout_marginRight="@dimen/dp8"
+            android:layout_toLeftOf="@+id/sendSmsButton"
+            android:layout_toStartOf="@+id/sendSmsButton"
+            android:background="@drawable/curve_edges_background"
+            android:inputType="textMultiLine"
+            android:padding="@dimen/dp8"
+            android:textCursorDrawable="@drawable/cursor" />
+
+        <ImageView
+            android:id="@+id/sendSmsButton"
+            android:layout_width="@dimen/dp32"
+            android:layout_height="@dimen/dp32"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/send_button" />
+
+    </RelativeLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
