added patientlist on patient connect and waiting list flow completed

--- a/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointment_patients_item_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointment_patients_item_layout.xml
@@ -188,6 +188,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/patientDetailsClickLinearLayout"
             android:layout_marginBottom="@dimen/dp6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
