--- a/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointments_child_item.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointments_child_item.xml
@@ -82,6 +82,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/patientDetailsClickLinearLayout"
             android:layout_marginBottom="@dimen/dp6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -175,6 +176,7 @@
         </RelativeLayout>
 
         <View
+            android:id="@+id/blueLineDivider"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp1"
             android:layout_marginEnd="@dimen/dp2"
@@ -182,6 +184,7 @@
             android:background="@color/tagColor" />
 
         <RelativeLayout
+            android:id="@+id/patientInfoDetailLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp11"
