--- a/app/src/main/res/layouts/global_ui_for_connect/layout/patient_connect_fragment.xml
+++ b/app/src/main/res/layouts/global_ui_for_connect/layout/patient_connect_fragment.xml
@@ -43,4 +43,22 @@
             app:srcCompat="@drawable/no_records_found" />
 
     </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true">
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/leftFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:src="@drawable/ic_add_action"
+        android:visibility="visible"
+        app:backgroundTint="@color/floating_blue_color" />
+    </RelativeLayout>
 </RelativeLayout>
