--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -58,4 +58,5 @@
     <dimen name="dp58">58dp</dimen>
     <dimen name="dp60">60dp</dimen>
     <dimen name="dp22">22dp</dimen>
+    <dimen name="list_item_height">100dp</dimen>
 </resources>
